crates/contextdb-core/tests/fixtures/compile_fail/assign_u64_to_snapshotid.rs
use contextdb_core::SnapshotId;

fn main() {
    let x: u64 = 42;
    let _s: SnapshotId = x;
}
